# DrishtriKon_CTF

./: .dockerignore  .env.example  .gitattributes  .gitignore  .replit  DATABASE_PRODUCTION_REPORT.md  Dockerfile  FEATURES.md  FEATURES_PRODUCTION_REPORT.md  README.md  RENDER_DEPLOY.md  SECURITY.md  SECURITY_PRODUCTION_REPORT.md  app.py  config.py  docker-compose.dev.yml  docker-compose.yml  email_service.py  file_security.py  forms.py  gunicorn.conf.py  honeypot.py  ids.py  ip_logging.py  main.py  models.py  models_head.txt  models_tail.txt  models_updated.py  pyproject.toml  pytest.ini  railway.json  rate_limiter.py  redis_config.py  requirements-dev.txt  requirements.txt  reset_database.py  run.py  security.py  security_headers.py  (+5 more)
.github/: copilot-instructions.md
app/: __init__.py  extensions.py  forms.py  startup.py
core/: app.py  cache_management.py  cache_utils.py  db_optimization.py  email_service.py  ip_logging.py  models.py  performance_cache.py  recaptcha.py  static_optimization.py  utils.py
docs/: AUTO_MIGRATION.md  CACHE_MANAGEMENT.md  COMPETITION_CHALLENGES_GUIDE.md  CONNECTION_POOL_EXHAUSTION_FIX.md  CONNECTION_POOL_FIX.md  DATABASE_RESILIENCE.md  DATABASE_RESILIENCE_QUICK_REF.md  DEPLOYMENT.md  DOCKER_GUIDE.md  IDRIVE_E2_CORS_SETUP.md  IMPLEMENTATION_SUMMARY.md  REFACTOR_SUMMARY.md  S3_FILE_STORAGE.md  S3_IMPLEMENTATION_SUMMARY.md  S3_QUICK_REFERENCE.md  SECURITY.md
ids_data/: ids_state.json
nginx/: nginx.conf  proxy_params.conf
routes/: admin.py  ads.py  auth.py  badge.py  challenges.py  competitions.py  host.py  main.py  performance.py  player.py  teams.py
scripts/: __init__.py  migrate.py  update_db.py  verify_db.py
security/: file_security.py  honeypot.py  ids.py  rate_limiter.py  security.py  security_headers.py  session_security.py  user_security.py
templates/: about.html  (+7 more)
(+164 files in other folders)
