[project]
name = "DrishtriKon-CTF"
version = "1.0.0"
description = "A comprehensive CTF platform with advanced security and performance features"
requires-python = ">=3.11"
authors = [
    {name = "DrishtriKon Team"}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Core Flask framework
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.1.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "flask-mail>=0.10.0",
    "flask-cors>=4.0.0",
    "flask-caching>=2.1.0",
    
    # Database and ORM
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.13.0",
    
    # Security and utilities
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "email-validator>=2.2.0",
    "python-dotenv>=1.1.0",
    "pyotp>=2.9.0",
    "markupsafe>=2.1.0",
    
    # HTTP and external requests
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    
    # File handling and security
    "python-magic>=0.4.27",
    
    # Image processing for QR codes
    "qrcode>=7.4.2",
    "pillow>=10.0.0",
    
    # System monitoring and performance
    "psutil>=5.9.0",
    
    # Production server
    "gunicorn>=23.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

test = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "pytest-cov>=4.0.0",
    "requests>=2.31.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[project.scripts]
drishtrikon = "app:main"